c/examples/writing-a-c-compiler-tests/tests/chapter_5/valid/mixed_precedence_assignment.c
int main(void) {
    int a = 1;
    int b = 0;
    a = 3 * (b = a);
    return a + b;
}