c/examples/writing-a-c-compiler-tests/tests/chapter_5/invalid_semantics/extra_credit/undeclared_compound_assignment.c
int main(void) {
    a += 1;
    return 0;
}